src/styles/buttons.scss
@use 'variables' as vars;
@use 'mixins' as mix;

.btn-array {
  display: flex;
  justify-content: center;
  align-items: flex-start; /* Align button tops instead of centering vertically */

  gap: 1.5rem;
  margin-top: 1.25rem;

  &.col-stack-mobile {
    @media (max-width: vars.$tablet) {
      @include mix.flex-column;
      width: 100%;
      margin-top: vars.$spacing-sm;
    }
  }
}

button.pill-button {
  font-family: vars.$font-body;
  text-transform: capitalize;
  border-radius: vars.$radius-2xl;
  padding-inline: vars.$spacing-xl;
  padding-block: calc(vars.$spacing-lg/2);
  width: fit-content;
  font-size: vars.$font-size-button-mob;
  font-weight: 500;
  @media (min-width: vars.$tablet) {
    font-size: vars.$font-size-button;
  }
  transition: background-color 100ms ease-in-out;

  &.bold {
    font-weight: 700;
  }

  &.outline {
    outline-style: solid;
    outline-width: 1px;
    outline-color: vars.$color-body-text;
    background-color: transparent;
    color: vars.$color-body-text;

    &:hover {
      @media (hover: hover) {
        cursor: pointer;
        background-color: vars.$color-body-text;
        color: white;
      }
    }
  }

  &.dark {
    background-color: vars.$color-body-text;
    color: white;

    &:hover {
      @media (hover: hover) {
        cursor: pointer;
        opacity: 80%;
      }
    }
  }
}

button.download {
  background-color: transparent;
  color: vars.$color-body-text;
  border: none;
  font-weight: 600;

  &:hover {
    @media (hover: hover) {
      cursor: pointer;
    }
  }

  &::after {
    content: '';
    background-image: url('/icons/cloud.svg');
    background-size: cover;
    width: 1em;
    height: 1em;
    display: inline-block;
    margin-left: 0.25em;
    vertical-align: middle;
  }
}

button.download.pill-button.dark {
  &::after {
    background-image: url('/icons/cloud_white.svg');
  }
}

button.download.pill-button.outline:hover {
  &::after {
    background-image: url('/icons/cloud_white.svg');
  }
}

button.arrow {
  background-color: transparent;
  color: vars.$color-body-text;
  border: none;
  font-weight: 600;

  &:hover {
    @media (hover: hover) {
      cursor: pointer;
    }
  }

  &::after {
    content: '';
    background-image: url('/icons/right.svg');
    background-size: cover;
    width: 1em;
    height: 1em;
    display: inline-block;
    margin-left: 0.25em;
    vertical-align: middle;
  }
}

button.arrow.pill-button.dark {
  &::after {
    background-image: url('/icons/right_white.svg');
  }
}

button.arrow.pill-button.outline:hover {
  &::after {
    background-image: url('/icons/right_white.svg');
  }
}

button.underline {
  background-color: transparent;
  color: vars.$color-body-text;
  border: none;
  font-weight: 600;
  text-decoration: underline;
  text-decoration-color: vars.$color-turmeric;
  text-decoration-thickness: 3px;
  text-underline-offset: 2px;

  &:hover {
    @media (hover: hover) {
      cursor: pointer;
      opacity: 70%;
    }
  }
}

// Disabled button styles for period-based deactivation
button.disabled,
button:disabled {
  opacity: 0.6;
  cursor: not-allowed;
  background-color: #6b7280 !important; /* gray-600 - darker than gray-400 */
  border-color: #6b7280 !important;
  color: #ffffff !important;
  pointer-events: none;
  text-decoration: none !important;

  &::after {
    display: none;
  }

  &:hover {
    background-color: #6b7280 !important;
    border-color: #6b7280 !important;
    opacity: 0.6;
    cursor: not-allowed;
  }
}

