Fixes: 1. search-icon button was given explicit width/height dimensions so that browsers dont default SVGs to 300x150px which overflows and gets clipped. 2. Disappearing message for apply button and elongated height of card are fixed bu adding  && buttonEl.offsetWidth > 0 to the guard condition. 3. CTA buttons stack vertically on mobile screen and align center.

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -12,6 +12,7 @@
   &.col-stack-mobile {
     @media (max-width: vars.$tablet) {
       @include mix.flex-column;
+      align-items: center;
       width: 100%;
       margin-top: vars.$spacing-sm;
     }
